--- a/templates/base.html
+++ b/templates/base.html
@@ -12,16 +12,18 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
-	<title>AdminKit Demo - Bootstrap 5 Admin Template</title>
+	<title>Foodby- Online Food on your way</title>
 
 	<link href="/media/css/app.css" rel="stylesheet">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" 
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+</head>
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger shadow-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">FoodBuy</a>
@@ -33,6 +35,12 @@
               <input type="text" placeholder="Search.." name="search">
               <button type="submit">Submit</button>
             </form>
+              <div class="navbar-tool-icon-box bg-secondary">
+                <span class="navbar-tool-label">
+                  {{request.user.customer.get_cart_count}}
+                </span>
+                <i class="fa fa-shopping-cart"></i>
+              </div>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -44,7 +52,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
               </li>
-        
+    
               <li class="nav-item">
                 <a class="nav-link" href="#">Login</a>
               </li>
